info panel for worlds
not yet responsive on medium-small screens

--- a/players.html
+++ b/players.html
@@ -119,9 +119,90 @@
                                                 <h4>abcedea</h4>
                                             </div>
                                         </div>
+
+                                        <div class="grid-x" component="stats/player/list/item">
+                                            <div class="shrink cell">
+                                                <img src="https://crafatar.com/avatars/41910d0e-d3d4-4eca-bf8f-30510281f269?size=50">
+                                            </div>
+                                            <div class="auto cell">
+                                                <h4>abcedea</h4>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="large-9 medium-8 cell" component="stats/player/info">
-                                        main stuff
+                                        <div component="stats/player/info/worlds">
+                                            <div component="stats/player/info/worlds/world" class="world-all">
+                                                <div class="grid-x grid-margin-x">
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/total">152,036</p>
+                                                        <p class="numexp">Total block diff</p>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/placed">988,722</p>
+                                                        <p class="numexp">Total placed</p>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/broken">836,686</p>
+                                                        <p class="numexp">Total broken</p>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/rolledback">208,192</p>
+                                                        <p class="numexp">Total rolled back</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div component="stats/player/info/worlds/world" class="world-lux">
+                                                <div class="grid-x grid-margin-x">
+                                                    <div class="medium-3 cell">
+                                                        <h3>Lux</h3>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/total">152,036</p>
+                                                        <p class="numexp">Total block diff</p>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/placed">988,722</p>
+                                                        <p class="numexp">Total placed</p>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/broken">836,686</p>
+                                                        <p class="numexp">Total broken</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div component="stats/player/info/worlds/world" class="world-akr">
+                                                <div class="grid-x grid-margin-x">
+                                                    <div class="medium-3 cell">
+                                                        <h3>Akr</h3>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/total">152,036</p>
+                                                        <p class="numexp">Total block diff</p>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/placed">988,722</p>
+                                                        <p class="numexp">Total placed</p>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <p class="bignum" component="stats/player/info/worlds/world/broken">836,686</p>
+                                                        <p class="numexp">Total broken</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div component="stats/player/info/worlds/search">
+                                                <div class="grid-x grid-margin-x">
+                                                    <div class="shrink cell">
+                                                        <h4>Search:</h4>
+                                                    </div>
+                                                    <div class="auto cell">
+                                                        <input type="text" placeholder="start typing a world name...">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
