--- a/map.html
+++ b/map.html
@@ -45,6 +45,7 @@
                         <a href="/">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 550"><defs><style>.cls-1{fill:url(#linear-gradient);}.cls-2{fill:url(#linear-gradient-2);}</style><linearGradient id="linear-gradient" x1="250" x2="250" y2="550" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f7931e"/><stop offset="1" stop-color="#f15a24"/></linearGradient><linearGradient id="linear-gradient-2" x1="49.5" x2="49.5" y2="124" xlink:href="#linear-gradient"/></defs><title>InterFlare Logo</title><g id="Layer_2" data-name="Layer 2"><g id="Board_3" data-name="Board 3"><path class="cls-1" d="M99,300c0,37,32,50,50,50s50-15,50-50V124c0-40,37-50,51-50,13,0,49,11,49,50V300c0,38,32,50,50,50,17,0,49-13,49-50V50c0-38,37.64-50,51-50,12,0,51,9,51,50V300c0,138.07-111.93,250-250,250S0,438.07,0,300V197c0-39,35-50,49-50,11,0,50,8,50,50"/><path class="cls-2" d="M49,124c15,0,50-11,50-50V49C99,8,60,0,49,0,37,0,0,9,0,49V74c0,48,49,50,49,50"/></g></g></svg>
                             <h1>InterFlare</h1>
+                            <p>&trade;</p>
                         </a>
                     </div>
 
