--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6/dist/css/foundation.min.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qsn5cop.css">
     <title>InterFlare</title>
   </head>
   <body>
