updated for resonant rise server

--- a/join.html
+++ b/join.html
@@ -6,38 +6,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="HandheldFriendly" content="True">
 
-        <title>Join / InterFlare</title>
-        
+        <title>Join / Interflare</title>
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/site.2.css">
 
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-W6G4DT8');</script>
-
-        <meta name="description" content="A creative minecraft server, equipped to handle anything from casual builds to massive projects">
+        <meta name="description" content="A resonant rise modded minecraft server, super friendly and easy-going - perfect for getting together and playing with a couple of friends">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="canonical" href="https://interflare.net/join.html">
         <meta name="referrer" content="no-referrer-when-downgrade">
 
         <meta property="og:site_name" content="InterFlare">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Join / InterFlare">
-        <meta property="og:description" content="A creative minecraft server, equipped to handle anything from casual builds to massive projects">
+        <meta property="og:title" content="Join / Interflare">
+        <meta property="og:description" content="A resonant rise modded minecraft server, super friendly and easy-going - perfect for getting together and playing with a couple of friends">
         <meta property="og:url" content="https://interflare.net/join.html">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="Join / InterFlare">
-        <meta name="twitter:description" content="A creative minecraft server, equipped to handle anything from casual builds to massive projects">
+        <meta name="twitter:title" content="Join / Interflare">
+        <meta name="twitter:description" content="A resonant rise modded minecraft server, super friendly and easy-going - perfect for getting together and playing with a couple of friends">
         <meta name="twitter:url" content="https://interflare.net/join.html">
 
         <script src="https://use.typekit.net/qsn5cop.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
     </head>
     <body>
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W6G4DT8"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="off-canvas-wrapper">
             <div class="off-canvas position-right" id="side-menu" data-off-canvas data-close-on-click="false" data-content-overlay="false">
                 <mobile-nav>
@@ -49,9 +41,6 @@
                     </div>
 
                     <ul>
-                        <li><a href="https://community.interflare.net/?utm_source=iflr-site">Community</a></li>
-                        <li><a href="map.html">Live maps</a></li>
-
                         <li class="cta"><a href="join.html">Join us</a></li>
                     </ul>
                 </mobile-nav>
@@ -66,10 +55,6 @@
                                     <h1>InterFlare</h1><p>&trade;</p>
                                 </a>
                             </li>
-                            <div class="items hide-for-small-only">
-                                <li><a href="https://community.interflare.net/?utm_source=iflr-site">Community</a></li>
-                                <li><a href="map.html">Live maps</a></li>
-                            </div>
                         </ul>
                         <ul class="float-right">
                             <li class="show-for-small-only">
@@ -83,14 +68,14 @@
                         </ul>
                     </div>
                 </nav>
-                
+
                 <page>
                     <section id="join" style="padding:40px 0 50px;">
                         <div class="container">
                             <h2 class="lesser">Join us today</h2>
                             <div class="input-group">
-                                <span class="input-group-label">MC v1.12.1</span>
-                                <input class="input-group-field" type="text" value="c.interflare.net" onfocus="this.select();">
+                                <span class="input-group-label">RR v5</span>
+                                <input class="input-group-field" type="text" value="rrise.interflare.net" onfocus="this.select();">
                             </div>
                         </div>
                     </section>
@@ -106,42 +91,38 @@
                         </bread-nav>
 
                         <div class="container">
-                            <h2>Setting your Minecraft version</h2>
+                            <h2>Getting the modpack</h2>
                             <p>
-                                Because Minecraft is constantly being updated, we have to try our best to
-                                strike a balance between the new features from updates, and server stability.
-                            </p>
-                            <p>
-                                This means that we will most likely be a version behind the offical
-                                releases for anywhere up to a week. If you want to join the server during
-                                this awkward transition period, you will have to set your Minecraft version
-                                in the launcher:
+                                The Resonant Rise Minecraft modpack is available through ATLauncher, which
+                                you can find <a href="https://atlauncher.com/pack/ResonantRise">here</a>.
                             </p>
 
                             <div class="grid-x grid-margin-x" data-equalizer>
                                 <div class="medium-4 cell">
                                     <h4 class="series under">Step 1</h4>
                                     <p data-equalizer-watch>
-                                        Click on the hamburger icon in the launcher, and select
-                                        "launch options" and then "add new".
+                                        Set up your account in ATLauncher by browsing to the "Accounts"
+                                        tab along the side.
                                     </p>
-                                    <img src="assets/img/mc-version-steps/1.png">
+                                    <img src="assets/img/atlauncher-rrise-steps/1.png">
                                 </div>
                                 <div class="medium-4 cell">
                                     <h4 class="series under">Step 2</h4>
                                     <p data-equalizer-watch>
-                                        Under "Version", select the current version of the server,
-                                        which is release 1.12.1. Click save.
+                                        Under the "Packs" tab, search for or scroll down a little bit to
+                                        find Resonant Rise, and click on the "New Instance" button to set
+                                        it up.
                                     </p>
-                                    <img src="assets/img/mc-version-steps/2.png">
+                                    <img src="assets/img/atlauncher-rrise-steps/2.png">
                                 </div>
                                 <div class="medium-4 cell">
                                     <h4 class="series under">Step 3</h4>
                                     <p data-equalizer-watch>
-                                        When you return back to the home screen, click the arrow
-                                        next to "play" and select the profile you just created.
+                                        Once the setup concludes, you will be able to browse to the
+                                        "Instances" tab, and click the play button. You should now be
+                                        ready to play!
                                     </p>
-                                    <img src="assets/img/mc-version-steps/3.png">
+                                    <img src="assets/img/atlauncher-rrise-steps/3.png">
                                 </div>
                             </div>
                         </div>
