--- a/join.html
+++ b/join.html
@@ -9,7 +9,7 @@
         <title>Join / Interflare</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/site.2.css">
+        <link rel="stylesheet" href="assets/css/site.css">
 
         <meta name="description" content="A resonant rise modded minecraft server, super friendly and easy-going - perfect for getting together and playing with a couple of friends">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
