--- a/static/join.html
+++ b/static/join.html
@@ -72,7 +72,7 @@
                 <page>
                     <section id="join" style="padding:40px 0 50px;">
                         <div class="container">
-                            <h2 class="lesser">Join us today</h2>
+                            <h2 class="lesser">Join us today <span class="status" component="quickinfo/server/status">pending</span></h2>
                             <div class="input-group">
                                 <span class="input-group-label">RR v5</span>
                                 <input class="input-group-field" type="text" value="rrise.interflare.net" onfocus="this.select();">
@@ -147,8 +147,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/5.0.1/what-input.min.js" integrity="sha256-H/pzN880hDBJqAzZip+BOpvX0ofDzjiB1HXUf/0tbcE=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js" integrity="sha256-mRYlCu5EG+ouD07WxLF8v4ZAZYCA6WrmdIXyn1Bv9Vk=" crossorigin="anonymous"></script>
-        <script>
-            $(document).foundation();
-        </script>
+        <script src="assets/js/site.js"></script>
     </body>
 </html>
